--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
 - psutil
 - conda-forge::gputil
 - wandb
-- tensorboard
+- tensorboard>=1.15
 - scikit-learn
 - matplotlib
 - numpy
@@ -35,4 +35,5 @@ dependencies:
     - gdown
     - ctrl-benchmark
     - gym
+    - higher
     - lvis
